[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "cryptography>=44.0.2",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "qrcode>=8.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
]
